<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HmiBottomBar" Id="{31e56192-536d-49be-b77c-f613bc4b327d}">
    <Declaration><![CDATA[TYPE ST_HmiBottomBar :
STRUCT CONSTANT 
	Start					: STRING := 'WebContent/Bottom/NavigationBarStart.content';
	Alarm					: STRING := 'WebContent/Bottom/NavigationBarAlarm.content';
	General_ReturnToStart	: STRING := 'WebContent/Bottom/NavigationBarReturnToStart.content';
	
	//--Start					: STRING := 'Bottom/BottomBar_Start.Content';
	//--General_ReturnToStart	: STRING := 'Bottom/BottomBar_ReturnToStart.Content';
	//--General_Return			: STRING := 'Bottom/BottomBar_Return.Content';
	//--Alarm					: STRING := 'Bottom/BottomBar_AlarmManager.Content';
	//--Procedure				: STRING := 'Bottom/BottomBar_Procedure.Content';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>