<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HmiTopBar" Id="{26dc13e1-128f-45c3-8bcd-0a7cf40aab6e}">
    <Declaration><![CDATA[TYPE ST_HmiTopBar :
STRUCT CONSTANT 
	//--GeneralTopbar	: STRING := 'Top/TopBar.Content';
	GeneralTopbar : STRING := 'WebContent/Top/TopBar.content';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>